fix: repair problem with too big navigation on mobile screen

--- a/nodes/static/nodes/css/widgets/full-navigation-layout.css
+++ b/nodes/static/nodes/css/widgets/full-navigation-layout.css
@@ -47,6 +47,13 @@ body {
     flex-direction: column;
     height: auto;
   }
+  .navigation-layout_scrollable-area {
+    flex-grow: 1;
+    overflow: visible;
+  }
+  .navbar {
+    height: 3.5rem;
+  }
 }
 .navigation-layout_scrollable-area {
   flex-grow: 1;
