--- a/nodes/static/nodes/css/widgets/iframe-node.css
+++ b/nodes/static/nodes/css/widgets/iframe-node.css
@@ -4,3 +4,8 @@
   padding: 0;
   flex-grow: 1;
 }
+@media (max-width: 768px) {
+  .iframe-node {
+    min-height: calc(100vh - 3.5rem);
+  }
+}
