--- a/nodes/static/nodes/css/widgets/sidebar.css
+++ b/nodes/static/nodes/css/widgets/sidebar.css
@@ -31,3 +31,9 @@
 .sidebar-submenu .sidebar-item {
   margin-bottom: 0.25rem;
 }
+/* TODO: Tie breakpoints with css */
+@media (max-width: 768px) {
+  .sidebar-navbar {
+    position: static;
+  }
+}
